force-app/main/default/objects/smagicinteract__Action_Parameter__c/fields/smagicinteract__Action__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains the ID of the related Action record.</description>
    <label>Action</label>
    <referenceTo>smagicinteract__Action__c</referenceTo>
    <relationshipLabel>Action Parameters</relationshipLabel>
    <relationshipName>Action_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>