force-app/main/default/objects/smagicinteract__Action_Parameter__c/fields/smagicinteract__Object__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object__c</fullName>
    <description>This field contains the API name of the related MOC.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>