force-app/main/default/objects/smagicinteract__Action_Parameter__c/fields/smagicinteract__Parameter__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Parameter__c</fullName>
    <description>This field contains the value of the parameter.</description>
    <label>Parameter Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>