force-app/main/default/objects/smagicinteract__Action_Parameter__c/fields/smagicinteract__Parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Parameter_Name__c</fullName>
    <description>This field contains the name of the parameter.</description>
    <label>Parameter Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>