force-app/main/default/objects/smagicinteract__Action_Parameter__c/fields/smagicinteract__Parameter_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Parameter_Type__c</fullName>
    <description>This field contains the type of the parameter. The type can be: URL, Field, etc.</description>
    <label>Parameter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>ChatterField</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>