force-app/main/default/objects/smagicinteract__Action_Parameter__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Parameter_Name__c</columns>
    <columns>smagicinteract__Object__c</columns>
    <columns>smagicinteract__Parameter_Type__c</columns>
    <columns>smagicinteract__Parameter__c</columns>
    <columns>smagicinteract__Action__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>